fix: fixed scrolling on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -10,8 +10,10 @@
 }
 
 @layer base {
+  html,
   body {
-    @apply overflow-x-hidden relative;
+    @apply -z-100 overflow-x-hidden relative;
+    width: 100%;
     font-family: "Yeseva One", serif;
     font-weight: 400;
     font-style: normal;
